# Kind-R-with-Sports-Data

./: .gitignore  Chapter_3.py  Chapter_3_polars.py  chaper_1.R  chaper_10.R  chaper_11.R  chaper_12.R  chaper_13.R  chaper_14.R  chaper_15.R  chaper_16.R  chaper_17.R  chaper_2.R  chaper_3.R  chaper_4.R  chaper_5.R  chaper_6.R  chaper_7.R  chaper_8.R  chaper_9.R  chapter_1.R  chapter_10.R  chapter_11.R  chapter_12.R  chapter_13.R  chapter_14.R  chapter_15.R  chapter_16.R  chapter_17.R  chapter_18.R  chapter_2.R  chapter_3.R  chapter_3.py  chapter_3_pandas.py  chapter_4.R  chapter_4.py  chapter_5.R  chapter_6.R  chapter_7.R  chapter_8.R  (+10 more)
Python/: chapter_1.py  chapter_10.py  chapter_11.py  chapter_12.py  chapter_13.py  chapter_14.py  chapter_15.py  chapter_16.py  chapter_17.py  chapter_18.py  chapter_2.py  chapter_3.py  chapter_3_altair.py  chapter_3_pandas.py  chapter_3_polars.py  chapter_4.py  chapter_5.py  chapter_6.py  chapter_7.py  chapter_8.py  chapter_9.py  kbo_batting_bayesian.csv  tennis_big3_results.csv
R/: 19_20_nba.csv  19_20_uefa_big_5.csv  2020_kbo_team_batting.csv  2020_ryu.csv  chapter_1.R  chapter_10.R  chapter_11.R  chapter_12.R  chapter_13.R  chapter_14.R  chapter_15.R  chapter_16.R  chapter_17.R  chapter_18.R  chapter_2.R  chapter_3.R  chapter_4.R  chapter_5.R  chapter_6.R  chapter_7.R  chapter_8.R  chapter_9.R  cheonan_attendance.csv  fifa_ranking.csv  international_soccer_matches_results.csv  jupytext.toml  kbo_batting_qualified.csv  kbo_batting_risp.csv  kbo_pythagorean_expectation.csv  kovo_sets_results.csv
