[project]
name = "sql-datathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.4.4",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "jupytext>=1.19.1",
    "polars>=1.38.1",
    "pyprojroot>=0.3.0",
    "sqlmesh[duckdb]>=0.230.1",
    "streamlit>=1.54.0",
]
